clustering in node.js is fun

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cluster": "^0.7.7",
     "express": "^4.10.4",
     "soap": "^0.6.0",
     "xml2js": "^0.4.4"
